build.log
bison -d asn1p_y.y -o asn1p_y.tab.c
asn1p_y.y: conflicts: 4 shift/reduce, 2 reduce/reduce
flex -o lex.yy.c asn1p_l.l
gcc -o testparser main.c asn1parser.c asn1p_y.tab.c lex.yy.c -I. -Wall
asn1parser.c:10:10: fatal error: 'asn1p_list.h' file not found
#include "asn1p_list.h"
         ^~~~~~~~~~~~~~
1 error generated.
asn1p_y.y:66:8: error: unknown type name 'asn1p_value_t'; did you mean 'asn1p_module_t'?
static asn1p_value_t *_convert_bitstring2binary(char *str, int base);
       ^~~~~~~~~~~~~
       asn1p_module_t
./asn1parser.h:7:31: note: 'asn1p_module_t' declared here
typedef struct asn1p_module_s asn1p_module_t;
                              ^
asn1p_y.y:67:41: error: unknown type name 'asn1p_expr_t'
static void _fixup_anonymous_identifier(asn1p_expr_t *expr);
                                        ^
asn1p_y.y:118:2: error: unknown type name 'asn1p_module_flags_e'
        asn1p_module_flags_e     a_module_flags;
        ^
asn1p_y.y:120:2: error: unknown type name 'asn1p_expr_type_e'
        asn1p_expr_type_e        a_type;        /* ASN.1 Type */
        ^
asn1p_y.y:121:2: error: unknown type name 'asn1p_expr_t'
        asn1p_expr_t            *a_expr;        /* Constructed collection */
        ^
asn1p_y.y:122:2: error: unknown type name 'asn1p_constraint_t'
        asn1p_constraint_t      *a_constr;      /* Constraint */
        ^
asn1p_y.y:123:31: error: field has incomplete type 'enum asn1p_constraint_type_e'
        enum asn1p_constraint_type_e    a_ctype;/* Constraint type */
                                        ^
asn1p_y.y:123:7: note: forward declaration of 'enum asn1p_constraint_type_e'
        enum asn1p_constraint_type_e    a_ctype;/* Constraint type */
             ^
asn1p_y.y:124:2: error: unknown type name 'asn1p_xports_t'
        asn1p_xports_t          *a_xports;      /* IMports/EXports */
        ^
asn1p_y.y:125:28: error: field has incomplete type 'struct AssignedIdentifier'
        struct AssignedIdentifier a_aid;        /* Assigned Identifier */
                                  ^
asn1p_y.y:64:15: note: forward declaration of 'struct AssignedIdentifier'
static struct AssignedIdentifier *saved_aid;
              ^
asn1p_y.y:126:2: error: unknown type name 'asn1p_oid_t'
        asn1p_oid_t             *a_oid;         /* Object Identifier */
        ^
asn1p_y.y:127:2: error: unknown type name 'asn1p_oid_arc_t'
        asn1p_oid_arc_t          a_oid_arc;     /* Single OID's arc */
        ^
asn1p_y.y:128:27: error: field has incomplete type 'struct asn1p_type_tag_s'
        struct asn1p_type_tag_s  a_tag;         /* A tag */
                                 ^
asn1p_y.y:128:9: note: forward declaration of 'struct asn1p_type_tag_s'
        struct asn1p_type_tag_s  a_tag;         /* A tag */
               ^
asn1p_y.y:129:2: error: unknown type name 'asn1p_ref_t'
        asn1p_ref_t             *a_ref;         /* Reference to custom type */
        ^
asn1p_y.y:130:2: error: unknown type name 'asn1p_wsyntx_t'
        asn1p_wsyntx_t          *a_wsynt;       /* WITH SYNTAX contents */
        ^
asn1p_y.y:131:2: error: unknown type name 'asn1p_wsyntx_chunk_t'
        asn1p_wsyntx_chunk_t    *a_wchunk;      /* WITH SYNTAX chunk */
        ^
asn1p_y.y:132:31: error: field has incomplete type 'struct asn1p_ref_component_s'
        struct asn1p_ref_component_s a_refcomp; /* Component of a reference */
                                     ^
asn1p_y.y:132:9: note: forward declaration of 'struct asn1p_ref_component_s'
        struct asn1p_ref_component_s a_refcomp; /* Component of a reference */
               ^
asn1p_y.y:133:2: error: unknown type name 'asn1p_value_t'; did you mean 'asn1p_module_t'?
        asn1p_value_t           *a_value;       /* Number, DefinedValue, etc */
        ^~~~~~~~~~~~~
        asn1p_module_t
./asn1parser.h:7:31: note: 'asn1p_module_t' declared here
typedef struct asn1p_module_s asn1p_module_t;
                              ^
asn1p_y.y:134:24: error: field has incomplete type 'struct asn1p_param_s'
        struct asn1p_param_s     a_parg;        /* A parameter argument */
                                 ^
asn1p_y.y:134:9: note: forward declaration of 'struct asn1p_param_s'
        struct asn1p_param_s     a_parg;        /* A parameter argument */
               ^
asn1p_y.y:135:2: error: unknown type name 'asn1p_paramlist_t'
        asn1p_paramlist_t       *a_plist;       /* A pargs list */
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
In file included from asn1p_l.l:8:
asn1p_y.y:118:2: error: unknown type name 'asn1p_module_flags_e'
        asn1p_module_flags_e     a_module_flags;
        ^
asn1p_y.y:120:2: error: unknown type name 'asn1p_expr_type_e'
        asn1p_expr_type_e        a_type;        /* ASN.1 Type */
        ^
asn1p_y.y:121:2: error: unknown type name 'asn1p_expr_t'
        asn1p_expr_t            *a_expr;        /* Constructed collection */
        ^
asn1p_y.y:122:2: error: unknown type name 'asn1p_constraint_t'
        asn1p_constraint_t      *a_constr;      /* Constraint */
        ^
asn1p_y.y:123:31: error: field has incomplete type 'enum asn1p_constraint_type_e'
        enum asn1p_constraint_type_e    a_ctype;/* Constraint type */
                                        ^
asn1p_y.y:123:7: note: forward declaration of 'enum asn1p_constraint_type_e'
        enum asn1p_constraint_type_e    a_ctype;/* Constraint type */
             ^
asn1p_y.y:124:2: error: unknown type name 'asn1p_xports_t'
        asn1p_xports_t          *a_xports;      /* IMports/EXports */
        ^
asn1p_y.y:125:28: error: field has incomplete type 'struct AssignedIdentifier'
        struct AssignedIdentifier a_aid;        /* Assigned Identifier */
                                  ^
asn1p_y.y:125:9: note: forward declaration of 'struct AssignedIdentifier'
        struct AssignedIdentifier a_aid;        /* Assigned Identifier */
               ^
asn1p_y.y:126:2: error: unknown type name 'asn1p_oid_t'
        asn1p_oid_t             *a_oid;         /* Object Identifier */
        ^
asn1p_y.y:127:2: error: unknown type name 'asn1p_oid_arc_t'
        asn1p_oid_arc_t          a_oid_arc;     /* Single OID's arc */
        ^
asn1p_y.y:128:27: error: field has incomplete type 'struct asn1p_type_tag_s'
        struct asn1p_type_tag_s  a_tag;         /* A tag */
                                 ^
asn1p_y.y:128:9: note: forward declaration of 'struct asn1p_type_tag_s'
        struct asn1p_type_tag_s  a_tag;         /* A tag */
               ^
asn1p_y.y:129:2: error: unknown type name 'asn1p_ref_t'
        asn1p_ref_t             *a_ref;         /* Reference to custom type */
        ^
asn1p_y.y:130:2: error: unknown type name 'asn1p_wsyntx_t'
        asn1p_wsyntx_t          *a_wsynt;       /* WITH SYNTAX contents */
        ^
asn1p_y.y:131:2: error: unknown type name 'asn1p_wsyntx_chunk_t'
        asn1p_wsyntx_chunk_t    *a_wchunk;      /* WITH SYNTAX chunk */
        ^
asn1p_y.y:132:31: error: field has incomplete type 'struct asn1p_ref_component_s'
        struct asn1p_ref_component_s a_refcomp; /* Component of a reference */
                                     ^
asn1p_y.y:132:9: note: forward declaration of 'struct asn1p_ref_component_s'
        struct asn1p_ref_component_s a_refcomp; /* Component of a reference */
               ^
asn1p_y.y:133:2: error: unknown type name 'asn1p_value_t'; did you mean 'asn1p_module_t'?
        asn1p_value_t           *a_value;       /* Number, DefinedValue, etc */
        ^~~~~~~~~~~~~
        asn1p_module_t
./asn1parser.h:7:31: note: 'asn1p_module_t' declared here
typedef struct asn1p_module_s asn1p_module_t;
                              ^
In file included from asn1p_l.l:8:
asn1p_y.y:134:24: error: field has incomplete type 'struct asn1p_param_s'
        struct asn1p_param_s     a_parg;        /* A parameter argument */
                                 ^
asn1p_y.y:134:9: note: forward declaration of 'struct asn1p_param_s'
        struct asn1p_param_s     a_parg;        /* A parameter argument */
               ^
asn1p_y.y:135:2: error: unknown type name 'asn1p_paramlist_t'
        asn1p_paramlist_t       *a_plist;       /* A pargs list */
        ^
asn1p_y.y:136:29: error: field has incomplete type 'struct asn1p_expr_marker_s'
        struct asn1p_expr_marker_s a_marker;    /* OPTIONAL/DEFAULT */
                                   ^
asn1p_y.y:136:9: note: forward declaration of 'struct asn1p_expr_marker_s'
        struct asn1p_expr_marker_s a_marker;    /* OPTIONAL/DEFAULT */
               ^
asn1p_y.y:137:27: error: field has incomplete type 'enum asn1p_constr_pres_e'
        enum asn1p_constr_pres_e a_pres;        /* PRESENT/ABSENT/OPTIONAL */
                                 ^
asn1p_y.y:137:7: note: forward declaration of 'enum asn1p_constr_pres_e'
        enum asn1p_constr_pres_e a_pres;        /* PRESENT/ABSENT/OPTIONAL */
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [all] Error 1
